5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1662_2970.log
== TEST (2019-04-15 15:14:41) 
-- CODE:
qf = 10042000
qo = 1.500
t = float(input("tempo: "))
i = qf/qo**(1/t) - 1
ii = round(i,5)
if (ii <= 0.01):
	print("Real")
else:
	print("Irreal")
-- OUTPUT:
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:14:51) 
-- CODE:
qf = 10042000
qo = 1.500
t = float(input("tempo: "))
i = qf/qo**(1/t) - 1
ii = round(i,5)
if (ii <= 0.01):
	print("Real")
else:
	print("Irreal")
-- EXECUTION TIME:
0.124018
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:38) 
-- CODE:
qf = 10042000
qo = 1.500
t = float(input("tempo: "))
i = qf/qo**(1/t) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
10035812.94168
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:31) 
-- CODE:
qf = 10042000
qo = 1500
t = float(input("tempo: "))
i = qf/qo**(1/t) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
9931006.97453
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:40) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = qf/qo**(1/t) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
1030482.00234
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:07) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
1030482.00234
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:17) 
-- CODE:
qf = 142000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
140429.50512
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:09) 
-- CODE:
qf = 10000042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
9889513726.11213
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:20) 
-- CODE:
qf = 142000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
140429.50512
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:31) 
-- CODE:
qf = 14200
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
14042.05051
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:03) 
-- CODE:
qf = 10042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
9931006.97453
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:26:49) 
-- CODE:
qf = 142000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- EXECUTION TIME:
0.187729
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
140429.50512
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
140172.83132
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
137737.27218
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:57) 
-- CODE:
qf = 100000042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
98894763448.0725
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:14) 
-- CODE:
qf = 14200
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
14042.05051
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:27) 
-- CODE:
qf = 1
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
-0.01105
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:24) 
-- CODE:
qf = 1
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
-0.00554
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:36) 
-- CODE:
qf = 1004200
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00496
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:45) 
-- CODE:
qf = 10004200
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00671
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:53) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:00) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01024
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:19) 
-- CODE:
qf = 100004200
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:25) 
-- CODE:
qf = 1000004200
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01024
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:35) 
-- CODE:
qf = 100004200
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:42) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01024
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:22) 
-- CODE:
qf = 14200000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00698
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:32) 
-- CODE:
qf = 142000000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00874
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:41) 
-- CODE:
qf = 1420000000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01051
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:50) 
-- CODE:
qf = 1042000000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01027
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:01) 
-- CODE:
qf = 142000000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00874
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:57) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00498
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:31) 
-- CODE:
qf = 10042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00672
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:40) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:47) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01024
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:34:02) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- EXECUTION TIME:
0.110895
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.01024
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01194
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02833
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:34:59) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.02628
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:11) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.02269
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:19) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01562
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:25) 
-- CODE:
qf = 142000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01255
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:34) 
-- CODE:
qf = 1420000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.0161
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:12) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.02269
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:18) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.02628
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:06) 
-- CODE:
qf = 100000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01378
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:15) 
-- CODE:
qf = 10000000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01734
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:27) 
-- CODE:
qf = 10000000000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.02269
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:29) 
-- CODE:
qf = 10000000000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.02269
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:38) 
-- CODE:
qf = 10000000000042
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01734
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:45) 
-- CODE:
qf = 1000000000042
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01556
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:51) 
-- CODE:
qf = 10000000042
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01201
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:58) 
-- CODE:
qf = 100000042
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:04) 
-- CODE:
qf = 1000000042
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01024
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:44) 
-- CODE:
qf = 10042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00672
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:52) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:57) 
-- CODE:
qf = 1000042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.01024
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:08) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00498
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:31) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
File "XXXX", line 5
    if (i <= 0.01):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:32) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
File "XXXX", line 5
    if (i <= 0.01):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:33) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = ((qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- ERROR:
File "XXXX", line 5
    if (i <= 0.01):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:40) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
1030482.00234
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:10) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)**0.5) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
783520.27003
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:19) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = (qf/qo**(1/t)**0.5) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
75225560.32056
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:33) 
-- CODE:
qf = 100042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00848
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:43) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00498
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:42:48) 
-- CODE:
qf = 1042000
qo = 1500
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- EXECUTION TIME:
0.138568
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00498
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00581
Real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01373
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:22) 
-- CODE:
qf = 1042000.00
qo = 1500.00
t = float(input("tempo: "))
i = (((qf/qo)**0.5)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00498
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:53) 
-- CODE:
qf = 1042000.00
qo = 1500.00
t = float(input("tempo: "))
i = ((qf/qo)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- OUTPUT:
0.00999
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:45:02) 
-- CODE:
qf = 1042000.00
qo = 1500.00
t = float(input("tempo: "))
i = ((qf/qo)**(1/t)) - 1
if (i <= 0.01):
	print(round(i,5))
	print("Real")
else:
	print(round(i,5))
	print("Irreal")
-- EXECUTION TIME:
0.128685
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
